<resources>
    <string name="app_name">Verdad o Reto</string>

    <!-- ***************************** -->
    <!-- Strings used for FragmentHome -->
    <!-- ***************************** -->
    <!-- Text -->
    <string name="text_main">Verdad o Reto</string>
    <string name="text_to_play">Toca para comenzar</string>
    <!-- Descriptions -->
    <string name="description_icon_settings" translatable="false">Icon Settings</string>
    <string name="description_icon_info" translatable="false">Icon Info</string>
    <string name="description_img_home" translatable="false">Image main</string>

    <!-- ***************************** -->
    <!-- Strings used for FragmentSettings -->
    <!-- ***************************** -->
    <!-- Descriptions -->
    <string name="description_icon_next" translatable="false">Icon Next</string>
    <string name="description_icon_flag" translatable="false">Icon Flag Language</string>
    <string name="description_icon_idiom" translatable="false">Icon Language</string>
    <string name="description_icon_vibration" translatable="false">Icon Vibration</string>
    <string name="description_icon_sound" translatable="false">Icon Sound</string>

    <string name="title_text_fragment_settings">Ajustes</string>
    <string name="text_button_home">Inicio</string>
    <string name="text_button_exit">Salir</string>
    <string name="text_idiom">Idioma</string>
    <string name="text_vibration">Vibración</string>
    <string name="text_sound">Sonido</string>
    <string name="text_language">Idioma</string>
    <string name="text_language_english" translatable="false">English</string>
    <string name="text_language_spanish" translatable="false">Español</string>

    <!-- ***************************** -->
    <!-- Strings used for FragmentPlayers -->
    <!-- ***************************** -->
    <!-- Descriptions -->
    <string name="description_image_back" translatable="false">Image Back</string>
    <!-- Text -->
    <string name="title_text_fragment_players">Jugadores</string>
    <string name="text_button_next">Siguiente</string>
    <string name="player_name_default">jugador</string>
    <string name="text_max_players">Máximo 8 jugadores</string>
    <string name="text_min_players">Mínimo 2 jugadores</string>


    <!-- ***************************** -->
    <!-- Strings used for FragmentRoulette -->
    <!-- ***************************** -->
    <!-- Descriptions -->
    <string name="description_image_roulette" translatable="false">Image Roulette</string>
    <string name="description_image_bottle" translatable="false">Image Bottle</string>
    <!-- Text -->
    <string name="text_button_truth">VERDAD</string>
    <string name="text_button_dare">RETO</string>
    <string name="player_name" translatable="false">\??</string>
    <!-- Lista de verdades -->
    <string-array name="truth_array">
        <item>¿Qué es lo más vergonzoso que te ha pasado en la vida?</item>
        <item>¿Qué es lo más loco que haces cuando estás solo/a?</item>
        <item>¿Hay algo de ti que no sepan tus amigos?</item>
        <item>Si pudieras no volver a ver a alguien nunca más... ¿a quién elegirías?</item>
        <item>Si pudieras ir a cenar con un famoso o una famosa, ¿con quién irías?</item>
        <item>¿Cuál es el hábito más desagradable que tienes?</item>
        <item>En una máquina del tiempo, ¿a qué época de la historia o momento de tu vida volverías?</item>
        <item>¿Dejarías a tu pareja si te ofrecieran medio millón de dólares? ¿Y por 1 millón de dólares?</item>
        <item>¿Has besado a más de una persona el mismo día? ¿Cuántas?</item>
        <item>¿Has seguido siendo amigo de alguien porque te beneficiaba más allá de la amistad?</item>
        <item>¿Cuándo fue la última vez que mentiste?</item>
        <item>¿Qué es lo peor que has hecho en el trabajo?</item>
        <item>¿Cuándo fue la última vez que lloraste?</item>
        <item>¿Quién es la última persona que has buscado en Instagram?</item>
        <item>¿Qué es lo que te alegra que tu familia no sepa de ti?</item>
        <item>¿Has engañado alguna vez a alguien?</item>
        <item>¿Cuál es la peor experiencia íntima que has tenido?</item>
        <item>¿Cuál es la mejor experiencia íntima que has tenido?</item>
    </string-array>
    <!-- Lista de retos -->
    <string-array name="dare_array">
        <item>Deja que alguien del grupo lea tus mensajes.</item>
        <item>Da una vuelta en ropa interior por la calle.</item>
        <item>Sirve las copas de todo el mundo durante toda la noche.</item>
        <item>Haz tantas flexiones como puedas en un minuto.</item>
        <item>No mires el móvil durante dos horas.</item>
        <item>Llama a tu última pareja y dile que le echas de menos.</item>
        <item>Manda un mensaje a uno de tus ex insultándolo.</item>
        <item>Enseñar las últimas cinco personas a las que enviaste mensajes de texto y lo que decían los mensajes.</item>
        <item>Enseñar la foto más embarazosa de tu teléfono.</item>
        <item>Dejar que el resto del grupo envíe un MD a alguien de tu cuenta de Instagram.</item>
        <item>Dejar que el grupo mire tus MDs de Instagram.</item>
        <item>Mantener tres cubitos de hielo en la boca hasta que se derritan.</item>
        <item>Decir algo sucio a la persona de tu izquierda.</item>
        <item>Dar un masaje en los pies a la persona de tu derecha.</item>
        <item>Poner 10 líquidos diferentes en un vaso y beberlo.</item>
        <item>Gritar la primera palabra que se te ocurra.</item>
        <item>Repetir todo lo que dice la persona de tu derecha hasta que sea tu turno de nuevo.</item>
        <item>Quitarte cuatro prendas de ropa.</item>
        <item>Dar "me gusta" a las 15 primeras publicaciones de tu Facebook.</item>
    </string-array>

    <!-- ***************************** -->
    <!-- Strings used for Fragment Truth-Dare -->
    <!-- ***************************** -->
    <!-- Text -->
    <string name="edittext_truth">VERDAD</string>
    <string name="edittext_dare">RETO</string>
    <string name="edittext_to_continue">Toca aquí para continuar</string>

    <!-- ***************************** -->
    <!-- Strings used for FragmentAbout -->
    <!-- ***************************** -->
    <!-- Text -->
    <string name="text_title_about">Sobre la aplicación</string>
    <string name="text_description_about">Verdad o reto es un juego de preguntas y retos a los participantes. Soporta multileguage ESPAÑOL - INGLÉS</string>

</resources>