<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_900"
    tools:context=".HomeFragment">

        <ImageView
            android:id="@+id/imageViewSettings"
            style="@style/Icon"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:contentDescription="@string/description_icon_settings"
            android:src="@drawable/ic_settings_18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewAbout"
            style="@style/Icon"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:contentDescription="@string/description_icon_info"
            android:src="@drawable/ic_info_18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPlay"
        style="@style/Body1_54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/TextViewPlayPadding"
        android:text="@string/text_to_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewHome" />

    <TextView
        style="@style/Headline1_85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_main"
        app:layout_constraintBottom_toTopOf="@+id/imageViewHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:adjustViewBounds="true"
        android:src="@mipmap/img_home"
        android:contentDescription="@string/description_img_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <TextView-->
<!--        android:id="@+id/textView5"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:text="TextView"-->
<!--        android:textColor="@color/prueba"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/imageViewHome"-->
<!--        tools:ignore="TextContrastCheck" />-->

</androidx.constraintlayout.widget.ConstraintLayout>