<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_900"
    tools:context=".PlayersFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_900"
            android:minHeight="@dimen/height_toolbar"
            android:theme="?attr/actionBarTheme"
            app:contentInsetStart="@dimen/margin_normal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewBack"
                    style="@style/Icon"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0"
                    android:src="@drawable/ic_arrow_back_18dp"
                    android:contentDescription="@string/description_image_back" />

                <TextView
                    style="@style/Headline3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin3"
                    android:layout_weight="1"
                    android:text="@string/title_text_fragment_players"
                    android:textColor="@color/white" />
                <Button
                    android:id="@+id/button_next"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:text="@string/text_button_next"
                    app:rippleColor="#26FFFFFF"
                    style="@style/ButtonNormalText"
                    />
            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCompetitors"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp"
            android:scrollbars="vertical" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingButtonRemove"
        style="@style/Widget.App.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_person_remove_18dp"
        app:fabCustomSize="@dimen/floatingactionbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="@dimen/iconfloatingactionbutton"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingButtonAdd"
        style="@style/Widget.App.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/floatingactionbutton_margin"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_person_add_18dp"
        app:fabCustomSize="@dimen/floatingactionbutton"
        app:layout_constraintBottom_toTopOf="@+id/floatingButtonRemove"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="@dimen/iconfloatingactionbutton"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>